<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark_background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/layoutContent"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="1.0">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.9"
                android:background="@color/dark_background">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolBar"
                    android:layout_width="fill_parent"
                    android:layout_height="?actionBarSize"
                    app:theme="@style/ToolbarColoredBackArrow">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txt_toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/quick_medium"
                        android:text="@string/sound_info"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </androidx.appcompat.widget.Toolbar>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="0.1">

                <ScrollView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_bg_value"
                        android:gravity="center|top"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_description" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_long_text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_description_2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_description_3" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_description_4"
                            android:textColor="@color/bright_red" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/how_loud_and_how_long"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_description_5"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/maximum_recommended_noise_dose"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginTop="12dp"
                            android:layout_marginRight="12dp"
                            android:fontFamily="@font/quick_regular"
                            android:gravity="center|left"
                            android:text="@string/sound_meter_description_6"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>
                </ScrollView>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>